[package]
name = "openapi-to-hurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = {version = "4.4.11", features = ["derive"]}
hurl_core = "4.1.0"
hurlfmt = "4.1.0"
oas3 = "0.4.0"
serde_json = "1.0.108"
