[package]
name = "openapi-to-hurl"
version = "0.2.1"
edition = "2021"
authors = ["Ethan Carlsson <ethanmcarlsson@gmail.com>"]
license = "MIT"
description = "A tool to create Hurl files (https://hurl.dev/) from openapi specs"
readme = "README.md"
homepage = "https://github.com/ethancarlsson/openapi-to-hurl"
repository = "https://github.com/ethancarlsson/openapi-to-hurl"
keywords = ["cli", "openapi", "hurl", "test generation"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.75"
clap = {version = "4.4.11", features = ["derive"]}
env_logger = "0.10.1"
hurl_core = "4.1.0"
hurlfmt = "4.1.0"
log = "0.4.20"
oas3 = "0.4.0"
pretty_assertions = "1.4.0"
serde_json = "1.0.108"
