[package]
name = "openapi-to-hurl"
version = "1.0.0"
edition = "2021"
authors = ["Ethan Carlsson <ethanmcarlsson@gmail.com>"]
license = "MIT"
description = "A tool to create Hurl files (https://hurl.dev/) from openapi specs"
readme = "README.md"
homepage = "https://github.com/ethancarlsson/openapi-to-hurl"
repository = "https://github.com/ethancarlsson/openapi-to-hurl"
keywords = ["cli", "openapi", "hurl", "generate", "test", "swagger"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.75"
clap = {version = "4.4.11", features = ["derive"]}
hurl_core = "4.1.0"
hurlfmt = "4.1.0"
log = "0.4.20"
oas3 = "0.4.0"
pretty_assertions = "1.4.0"
regex = "1.10.3"
serde_json = "1.0.108"
stderrlog = "0.6.0"

[build-dependencies]
clap_mangen = "0.2.20"
clap = {version = "4.4.11", features = ["derive"]}
